changes not working

--- a/car_sounds/requirements.txt
+++ b/car_sounds/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.104.1
-uvicorn==0.23.2
-aio-pika==9.3.0
-python-multipart==0.0.6
-pyAudioAnalysis==0.3.14
-eyed3==0.9.7
-hmmlearn==0.3.0
-numpy==1.26.0
-pydub==0.25.1
+aio_pika
+uvicorn
+fastapi
+pyAudioAnalysis
+imblearn
+pydub
+plotly
+python-multipart
+eyed3
+matplotlib
+tqdm
